[package]
name = "imtl-rs"
version = "0.1.3"
edition = "2021"

[lib]
name = "imtl"
path = "src/imtl/lib.rs"

[dependencies]
derive_builder = "0.12.0"
bitflags  = "2.4.1"
anyhow = "1.0.79"
crossbeam-utils = "0.8.18"

[dependencies.imtl-sys]
path = "imtl-sys"
version = "^0.1.0"

[dev-dependencies]
ctrlc = "3.4.2"
memmap2 = "0.9.3"
clap = { version = "4.4.13", features = ["derive"] }
sdl2 = "0.36.0"
