[package]
name = "imtl-rs"
version = "0.1.4"
edition = "2021"

[lib]
name = "imtl"
path = "src/imtl/lib.rs"

[dependencies]
derive_builder = "0.20.0"
bitflags  = "2.5.0"
anyhow = "1.0.82"
crossbeam-utils = "0.8.19"

[dependencies.imtl-sys]
path = "imtl-sys"
version = "^0.1.0"

[dev-dependencies]
ctrlc = "3.4.4"
memmap2 = "0.9.4"
clap = { version = "4.5.4", features = ["derive"] }
sdl2 = "0.36.0"
